WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243224
[WPE][GTK] webkit_web_view_run_async_javascript_in_world does not allow default world
https://bugs.webkit.org/show_bug.cgi?id=243224
Summary
[WPE][GTK] webkit_web_view_run_async_javascript_in_world does not allow defau...
Daniel Kolesa
Reported
2022-07-26 12:45:16 PDT
Related:
https://bugs.webkit.org/show_bug.cgi?id=241420
The new API does not have an equivalent that runs code in the default world, and there is no way to ensure the default world is used with the world-parameter API. The code seems to assume that an empty string will use the default world, but that is not the case - this will still use a completely separate world from the default. I will create a patch for this.
Attachments
Add attachment
proposed patch, testcase, etc.
Daniel Kolesa
Comment 1
2022-07-26 13:18:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2751
EWS
Comment 2
2022-07-29 07:52:42 PDT
Committed
252947@main
(bd12d92e5f93): <
https://commits.webkit.org/252947@main
> Reviewed commits have been landed. Closing PR #2751 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug